force-app/main/default/objects/Account/fields/Address_En__c.field-meta.xml
<CustomField>
    <fullName>Address_En__c</fullName>
    <label>所在地（英語）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>