force-app/main/default/objects/Account/fields/AmountOfSales2__c.field-meta.xml
<CustomField>
    <fullName>AmountOfSales2__c</fullName>
    <label>売上高(前期)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>