force-app/main/default/objects/Account/fields/AmountOfSales3__c.field-meta.xml
<CustomField>
    <fullName>AmountOfSales3__c</fullName>
    <label>売上高(前々期)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>