force-app/main/default/objects/Account/fields/AmountOfSales__c.field-meta.xml
<CustomField>
    <fullName>AmountOfSales__c</fullName>
    <label>売上高</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>