force-app/main/default/objects/Account/fields/AttributeSurveyDateOfExpiry__c.field-meta.xml
<CustomField>
    <fullName>AttributeSurveyDateOfExpiry__c</fullName>
    <formula>IF(AND(MONTH( AttributeSurveyLastApprovalDate__c ) = 2,DAY( AttributeSurveyLastApprovalDate__c ) = 29)
,DATE( YEAR( AttributeSurveyLastApprovalDate__c ) + 2, 2, 28)
,DATE( YEAR( AttributeSurveyLastApprovalDate__c ) + 2, MONTH( AttributeSurveyLastApprovalDate__c ), DAY( AttributeSurveyLastApprovalDate__c ) ) -1
)</formula>
    <label>属性調査有効期限</label>
    <type>Date</type>
</CustomField>