force-app/main/default/objects/Account/fields/AttributeSurveyLastApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>AttributeSurveyLastApprovalDate__c</fullName>
    <label>属性調査最終承認日</label>
    <type>Date</type>
</CustomField>