force-app/main/default/objects/Account/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>取引銀行</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>