force-app/main/default/objects/Account/fields/bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>bankruptcy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>倒産フラグ</label>
    <type>Checkbox</type>
</CustomField>