force-app/main/default/objects/Account/fields/BranchCustomerSurveyStatusText__c.field-meta.xml
<CustomField>
    <fullName>BranchCustomerSurveyStatusText__c</fullName>
    <label>支社内顧客調査状況（ご自由に入力ください）</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>