force-app/main/default/objects/Account/fields/CapitalAdequacyRatio2__c.field-meta.xml
<CustomField>
    <fullName>CapitalAdequacyRatio2__c</fullName>
    <label>自己資本率(前期)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>