force-app/main/default/objects/Account/fields/CapitalAdequacyRatio__c.field-meta.xml
<CustomField>
    <fullName>CapitalAdequacyRatio__c</fullName>
    <label>自己資本率</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>