force-app/main/default/objects/Account/fields/CompanyEntityCode__c.field-meta.xml
<CustomField>
    <fullName>CompanyEntityCode__c</fullName>
    <label>事業体コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>