force-app/main/default/objects/Account/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <label>事業体名（漢字・現地語）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>