force-app/main/default/objects/Account/fields/CompanyNameEn__c.field-meta.xml
<CustomField>
    <fullName>CompanyNameEn__c</fullName>
    <label>事業体名（英語）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>