force-app/main/default/objects/Account/fields/CompanyNameKana__c.field-meta.xml
<CustomField>
    <fullName>CompanyNameKana__c</fullName>
    <inlineHelpText>日本企業の場合</inlineHelpText>
    <label>事業体名（カナ）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>