force-app/main/default/objects/Account/fields/CompanyNameShort__c.field-meta.xml
<CustomField>
    <fullName>CompanyNameShort__c</fullName>
    <inlineHelpText>関連会社のみ</inlineHelpText>
    <label>事業体略称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>