force-app/main/default/objects/Account/fields/CreditInvestigation__c.field-meta.xml
<CustomField>
    <fullName>CreditInvestigation__c</fullName>
    <label>信用調査完了日</label>
    <type>Date</type>
</CustomField>