force-app/main/default/objects/Account/fields/CreditInvestigationUrl__c.field-meta.xml
<CustomField>
    <fullName>CreditInvestigationUrl__c</fullName>
    <label>信用調査URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>