force-app/main/default/objects/Account/fields/DataDivision__c.field-meta.xml
<CustomField>
    <fullName>DataDivision__c</fullName>
    <label>データ区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>