force-app/main/default/objects/Account/fields/DBUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>DBUpdatedDate__c</fullName>
    <label>DB更新日</label>
    <type>Date</type>
</CustomField>