force-app/main/default/objects/Account/fields/Deletionflag__c.field-meta.xml
<CustomField>
    <fullName>Deletionflag__c</fullName>
    <label>削除区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1:被合併</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2:重複(削除)</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3:倒産</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4:廃業</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5:解散</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6:休業</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7:所在不明</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8:海外企業重複</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>