force-app/main/default/objects/Account/fields/DigestDivision__c.field-meta.xml
<CustomField>
    <fullName>DigestDivision__c</fullName>
    <label>ダイジェスト区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>