force-app/main/default/objects/Account/fields/Dividend2__c.field-meta.xml
<CustomField>
    <fullName>Dividend2__c</fullName>
    <label>配当(前期)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>