force-app/main/default/objects/Account/fields/Dividend3__c.field-meta.xml
<CustomField>
    <fullName>Dividend3__c</fullName>
    <label>配当(前々期)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>