force-app/main/default/objects/Account/fields/Dividend__c.field-meta.xml
<CustomField>
    <fullName>Dividend__c</fullName>
    <label>配当</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>