force-app/main/default/objects/Account/fields/DunsNumber__c.field-meta.xml
<CustomField>
    <fullName>DunsNumber__c</fullName>
    <label>DUNSナンバー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>