force-app/main/default/objects/Account/fields/EDINETCode__c.field-meta.xml
<CustomField>
    <fullName>EDINETCode__c</fullName>
    <label>EDINETコード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>