force-app/main/default/objects/Account/fields/ExclusionOfAntisocialForceCheck__c.field-meta.xml
<CustomField>
    <fullName>ExclusionOfAntisocialForceCheck__c</fullName>
    <label>暴排条項締結有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有（双務）</fullName>
            </value>
            <value>
                <fullName>有（片務）</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>