force-app/main/default/objects/Account/fields/ExclusionOfAntisocialForceContractWay__c.field-meta.xml
<CustomField>
    <fullName>ExclusionOfAntisocialForceContractWay__c</fullName>
    <label>暴排条項締結手段</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>基本契約書</fullName>
            </value>
            <value>
                <fullName>覚書</fullName>
            </value>
            <value>
                <fullName>約款（契約毎）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>