force-app/main/default/objects/Account/fields/ExportManagementCheck__c.field-meta.xml
<CustomField>
    <fullName>ExportManagementCheck__c</fullName>
    <inlineHelpText>FISの最終承認日、有効期限です。各支社での調査結果は輸管K1-WFで確認ください。</inlineHelpText>
    <label>FIS顧客調査（様式K1）最終承認日</label>
    <type>Date</type>
</CustomField>