force-app/main/default/objects/Account/fields/FISExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>FISExpirationDate__c</fullName>
    <label>FIS顧客調査（様式K1）有効期限</label>
    <type>Date</type>
</CustomField>