force-app/main/default/objects/Account/fields/FoundedDate__c.field-meta.xml
<CustomField>
    <fullName>FoundedDate__c</fullName>
    <label>創業</label>
    <type>Date</type>
</CustomField>