force-app/main/default/objects/Account/fields/GrowthAmount2__c.field-meta.xml
<CustomField>
    <fullName>GrowthAmount2__c</fullName>
    <label>売上伸長額(前期)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>