force-app/main/default/objects/Account/fields/GrowthAmount3__c.field-meta.xml
<CustomField>
    <fullName>GrowthAmount3__c</fullName>
    <label>売上伸長額(前々期)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>