force-app/main/default/objects/Account/fields/GrowthAmount__c.field-meta.xml
<CustomField>
    <fullName>GrowthAmount__c</fullName>
    <label>売上伸長額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>