force-app/main/default/objects/Account/fields/GrowthRate2__c.field-meta.xml
<CustomField>
    <fullName>GrowthRate2__c</fullName>
    <label>売上伸長率(前期)</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>