force-app/main/default/objects/Account/fields/GrowthRate3__c.field-meta.xml
<CustomField>
    <fullName>GrowthRate3__c</fullName>
    <label>売上伸長率(前々期)</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>