force-app/main/default/objects/Account/fields/GrowthRate__c.field-meta.xml
<CustomField>
    <fullName>GrowthRate__c</fullName>
    <label>売上伸長率</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>