force-app/main/default/objects/Account/fields/ImportantCustomer__c.field-meta.xml
<CustomField>
    <fullName>ImportantCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>重要顧客</label>
    <type>Checkbox</type>
</CustomField>