force-app/main/default/objects/Account/fields/Industory1__c.field-meta.xml
<CustomField>
    <fullName>Industory1__c</fullName>
    <label>業種１（主）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>