force-app/main/default/objects/Account/fields/Industory2__c.field-meta.xml
<CustomField>
    <fullName>Industory2__c</fullName>
    <label>業種２（従）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>