force-app/main/default/objects/Account/fields/Industory3__c.field-meta.xml
<CustomField>
    <fullName>Industory3__c</fullName>
    <label>業種３（従）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>