force-app/main/default/objects/Account/fields/IndustryTSR__c.field-meta.xml
<CustomField>
    <fullName>IndustryTSR__c</fullName>
    <label>業種（TSR)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>