force-app/main/default/objects/Account/fields/InvestigationDate__c.field-meta.xml
<CustomField>
    <fullName>InvestigationDate__c</fullName>
    <label>調査年月日</label>
    <type>Date</type>
</CustomField>