force-app/main/default/objects/Account/fields/IsOpportunityStarted__c.field-meta.xml
<CustomField>
    <fullName>IsOpportunityStarted__c</fullName>
    <label>取引開始伺い完了日</label>
    <type>Date</type>
</CustomField>