force-app/main/default/objects/Account/fields/LocationCode__c.field-meta.xml
<CustomField>
    <fullName>LocationCode__c</fullName>
    <label>所在地コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>