force-app/main/default/objects/Account/fields/Margin2__c.field-meta.xml
<CustomField>
    <fullName>Margin2__c</fullName>
    <label>利益金(前期)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>