force-app/main/default/objects/Account/fields/Margin3__c.field-meta.xml
<CustomField>
    <fullName>Margin3__c</fullName>
    <label>利益金(前々期)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>