force-app/main/default/objects/Account/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <label>利益金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>