force-app/main/default/objects/Account/fields/MarginGrowthAmount2__c.field-meta.xml
<CustomField>
    <fullName>MarginGrowthAmount2__c</fullName>
    <label>利益伸長額(前期)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>