force-app/main/default/objects/Account/fields/MarginGrowthAmount3__c.field-meta.xml
<CustomField>
    <fullName>MarginGrowthAmount3__c</fullName>
    <label>利益伸長額(前々期)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>