force-app/main/default/objects/Account/fields/MarginGrowthAmount__c.field-meta.xml
<CustomField>
    <fullName>MarginGrowthAmount__c</fullName>
    <label>利益伸長額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>