force-app/main/default/objects/Account/fields/MarginRate2__c.field-meta.xml
<CustomField>
    <fullName>MarginRate2__c</fullName>
    <label>利益伸長率(前期)</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>