force-app/main/default/objects/Account/fields/MarginRate3__c.field-meta.xml
<CustomField>
    <fullName>MarginRate3__c</fullName>
    <label>利益伸長率(前々期)</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>