force-app/main/default/objects/Account/fields/MarginRate__c.field-meta.xml
<CustomField>
    <fullName>MarginRate__c</fullName>
    <label>利益伸長率</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>