force-app/main/default/objects/Account/fields/MelcoCode2__c.field-meta.xml
<CustomField>
    <fullName>MelcoCode2__c</fullName>
    <label>COMPANYコード</label>
    <length>7</length>
    <type>Text</type>
</CustomField>