force-app/main/default/objects/Account/fields/MelcoCode__c.field-meta.xml
<CustomField>
    <fullName>MelcoCode__c</fullName>
    <externalId>true</externalId>
    <label>統一企業コード</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>