force-app/main/default/objects/Account/fields/MelcoCodeFK__c.field-meta.xml
<CustomField>
    <fullName>MelcoCodeFK__c</fullName>
    <description>親取引先設定の為の外部ID項目</description>
    <externalId>true</externalId>
    <label>統一企業コード（企業情報）</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>