force-app/main/default/objects/Account/fields/MelcoCodeParent__c.field-meta.xml
<CustomField>
    <fullName>MelcoCodeParent__c</fullName>
    <formula>IF( ParentId &lt;&gt; &apos;&apos;,
  Parent.MelcoCodeFK__c   ,
 &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>本社統一企業コード</label>
    <type>Text</type>
</CustomField>