force-app/main/default/objects/Account/fields/Month2__c.field-meta.xml
<CustomField>
    <fullName>Month2__c</fullName>
    <label>月数(前期)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>