force-app/main/default/objects/Account/fields/Month3__c.field-meta.xml
<CustomField>
    <fullName>Month3__c</fullName>
    <label>月数(前々期)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>