force-app/main/default/objects/Account/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>同業売上高順位</label>
    <length>255</length>
    <type>Text</type>
</CustomField>