force-app/main/default/objects/Account/fields/OfficeName__c.field-meta.xml
<CustomField>
    <fullName>OfficeName__c</fullName>
    <label>事業所名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>