force-app/main/default/objects/Account/fields/OfficeName_En__c.field-meta.xml
<CustomField>
    <fullName>OfficeName_En__c</fullName>
    <label>事業所名（英語）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>