force-app/main/default/objects/Account/fields/OfficeName_Local__c.field-meta.xml
<CustomField>
    <fullName>OfficeName_Local__c</fullName>
    <label>事業所名（漢字・現地語）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>