force-app/main/default/objects/Account/fields/Officers__c.field-meta.xml
<CustomField>
    <fullName>Officers__c</fullName>
    <label>役員</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>