force-app/main/default/objects/Account/fields/OldAddress__c.field-meta.xml
<CustomField>
    <fullName>OldAddress__c</fullName>
    <label>旧所在地（漢字・現地語）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>