force-app/main/default/objects/Account/fields/OldAddressEn__c.field-meta.xml
<CustomField>
    <fullName>OldAddressEn__c</fullName>
    <label>旧所在地（英語）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>