force-app/main/default/objects/Account/fields/OldCompanyName__c.field-meta.xml
<CustomField>
    <fullName>OldCompanyName__c</fullName>
    <label>旧事業体名（漢字・現地語）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>