force-app/main/default/objects/Account/fields/OldCompanyNameEn__c.field-meta.xml
<CustomField>
    <fullName>OldCompanyNameEn__c</fullName>
    <label>旧事業体名（英語）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>