force-app/main/default/objects/Account/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <label>概況</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>