force-app/main/default/objects/Account/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>扱い品</label>
    <length>255</length>
    <type>Text</type>
</CustomField>