force-app/main/default/objects/Account/fields/ProductFrom__c.field-meta.xml
<CustomField>
    <fullName>ProductFrom__c</fullName>
    <label>仕入先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>