force-app/main/default/objects/Account/fields/ReportUodatedDate__c.field-meta.xml
<CustomField>
    <fullName>ReportUodatedDate__c</fullName>
    <label>レポート更新日</label>
    <type>Date</type>
</CustomField>