force-app/main/default/objects/Account/fields/Ruisekisei_yaku_kaisuu__c.field-meta.xml
<CustomField>
    <fullName>Ruisekisei_yaku_kaisuu__c</fullName>
    <inlineHelpText>今までの成約回数。
成立フラグが立っている商談の合計数</inlineHelpText>
    <label>累積成約回数</label>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>