force-app/main/default/objects/Account/fields/SalesFor__c.field-meta.xml
<CustomField>
    <fullName>SalesFor__c</fullName>
    <label>販売先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>