force-app/main/default/objects/Account/fields/SalesType__c.field-meta.xml
<CustomField>
    <fullName>SalesType__c</fullName>
    <label>営業種目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>