force-app/main/default/objects/Account/fields/Sansan_CI__CI_SOC_FK__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CI_SOC_FK__c</fullName>
    <externalId>true</externalId>
    <label>SOC(システム)</label>
    <length>13</length>
    <type>Text</type>
</CustomField>