force-app/main/default/objects/Account/fields/Sansan_CI__CreatedFrom__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CreatedFrom__c</fullName>
    <defaultValue>&quot;Non Business card&quot;</defaultValue>
    <label>(Sansan)レコード作成元</label>
    <length>255</length>
    <type>Text</type>
</CustomField>