force-app/main/default/objects/Account/fields/Sansan_CI__IsAutoLinkExcluded__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsAutoLinkExcluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動関連づけ対象外フラグ</label>
    <type>Checkbox</type>
</CustomField>