force-app/main/default/objects/Account/fields/Sansan_CI__IsSlcIdentified__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsSlcIdentified__c</fullName>
    <formula>IF (
     Sansan_CI__CI_SLC__c != &quot;&quot;,
     true,
     false
     )</formula>
    <label>(Sansan)SLC識別済み</label>
    <type>Checkbox</type>
</CustomField>