force-app/main/default/objects/Account/fields/Sansan_CI__IsSocIdentified__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsSocIdentified__c</fullName>
    <formula>IF (
     Sansan_CI__CI_SOC_FK__c != &quot;&quot;,
     true,
     false
     )</formula>
    <label>(Sansan)SOC識別済み</label>
    <type>Checkbox</type>
</CustomField>