force-app/main/default/objects/Account/fields/Score2__c.field-meta.xml
<CustomField>
    <fullName>Score2__c</fullName>
    <label>評点(前回)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>