force-app/main/default/objects/Account/fields/Score3__c.field-meta.xml
<CustomField>
    <fullName>Score3__c</fullName>
    <label>評点(前々回)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>