force-app/main/default/objects/Account/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>評点</label>
    <length>255</length>
    <type>Text</type>
</CustomField>