force-app/main/default/objects/Account/fields/settlementDate2__c.field-meta.xml
<CustomField>
    <fullName>settlementDate2__c</fullName>
    <label>決算年月(前期)</label>
    <type>Date</type>
</CustomField>