force-app/main/default/objects/Account/fields/settlementDate3__c.field-meta.xml
<CustomField>
    <fullName>settlementDate3__c</fullName>
    <label>決算年月(前々期)</label>
    <type>Date</type>
</CustomField>