force-app/main/default/objects/Account/fields/settlementDate__c.field-meta.xml
<CustomField>
    <fullName>settlementDate__c</fullName>
    <label>決算年月</label>
    <type>Date</type>
</CustomField>