force-app/main/default/objects/Account/fields/SFDC_Latest_Closed_date__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Latest_Closed_date__c</fullName>
    <inlineHelpText>直近の成約日。 
成立フラグが立っている最大の商談の完了予定日</inlineHelpText>
    <label>最新成約日</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>