force-app/main/default/objects/Account/fields/SFDC_RuisekiClose_Amount__c.field-meta.xml
<CustomField>
    <fullName>SFDC_RuisekiClose_Amount__c</fullName>
    <inlineHelpText>今までの成約金額。 
成立フラグが立っている商談の合計金額</inlineHelpText>
    <label>累積成約金額</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>