force-app/main/default/objects/Account/fields/StockCode__c.field-meta.xml
<CustomField>
    <fullName>StockCode__c</fullName>
    <label>株式コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>