force-app/main/default/objects/Account/fields/StockHolders__c.field-meta.xml
<CustomField>
    <fullName>StockHolders__c</fullName>
    <label>株主</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>