force-app/main/default/objects/Account/fields/StockList__c.field-meta.xml
<CustomField>
    <fullName>StockList__c</fullName>
    <label>上場区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>