force-app/main/default/objects/Account/fields/TSRStatus__c.field-meta.xml
<CustomField>
    <fullName>TSRStatus__c</fullName>
    <label>TSR紐付けステータス</label>
    <length>255</length>
    <type>Text</type>
</CustomField>