force-app/main/default/objects/Account/recordTypes/Office.recordType-meta.xml
<RecordType>
    <fullName>Office</fullName>
    <active>true</active>
    <label>事業所</label>
</RecordType>